# monte-rs

./: .pre-commit-config.yaml  Cargo.toml
bins/paths/: test.json
src/: main.rs
src/actuator/: mod.rs  motor_group.rs  telemetry.rs
src/config/: mod.rs
src/localization/: mod.rs
src/localization/localization/: mod.rs  particle_filter.rs
src/localization/predict/: mod.rs  tank_pose_tracking.rs
src/localization/sensor/: distance.rs  gps.rs  line_tracker.rs  mod.rs
src/motion_control/: mod.rs  path.rs
src/motion_control/motion_profiling/: mod.rs
src/motion_control/ramsete/: mod.rs
src/sensor/: mod.rs  orientation.rs  rotary.rs
src/state_machine/: mod.rs
src/subsystems/: drivetrain.rs  goal_clamp.rs  hook.rs  intake.rs  lift.rs  mod.rs
src/utils/: mod.rs
