[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
vexide = "0.3.0"
