[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
futures = { version = "0.3.30", default-features = false, features = [
    "async-await",
] }
simba = { version = "0.9.0", default-features = false, features = [
    "libm_force",
] }
nalgebra = { version = "0.33.0", default-features = false, features = [
    "macros", "serde-serialize-no-std", "alloc"
] }
vexide = { git = "https://github.com/vexide/vexide.git" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng", "alloc"] }
uom = { version = "0.36.0", default-features = false, features = ["f64", "si"] }
rand_distr = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.206", default-features = false, features = ["alloc", "derive"] }
arr_macro = "0.2.1"
